examples/pos/mutable.effekt
module mutable

def main() = {
  var x = 4;
  x = x + 1;
  println(x)
}